--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,6 @@
   "version": 2,
   "public": true,
   "builds": [
-    { "src": "html/index.html", "use": "@vercel/static" }
+    { "src": "index.html", "use": "@vercel/static" }
   ]
 }
